<resources>
    <string name="app_name">FreeComputer</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="Lliure">Lliure</string>
    <string name="Reservat">Reservat</string>
    <string name="title_activity_autentificacio">Sign in</string>
    <string name="Mapa">Mapa UPC</string>
    <string name="Llista">Llista Classes</string>
    <string name="Refrescar">Refrescar Aules</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings Preferences -->
    <string name="SummaryLlista">Elegeix la vista que vulguis</string>
    <string name="TipusVista">Vista</string>
    <string name="Configuracio">Configuració</string>
    <string name="TitolNotificacions">Activar les notificacions</string>
    <string name="SummaryNotis">Activar/Desactivar notificacions</string>
    <string name="EstatTelefon">Estat del telèfon</string>
    <string name="TipusNotis">Tipus de Notificacions</string>
    <string name="SummaryEstatTelefon">Elegeix la notificació que vulguis</string>
    <string name="SummaryNotificacions">Quan vols ser avisat pel telèfon?</string>
</resources>
